fix positioning on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -613,7 +613,7 @@ p {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .main-card1, .main-card3, .main-card4, .main-card5, .main-card6 {
+    .main-card1, .main-card2, .main-card3, .main-card4, .main-card5, .main-card6 {
         margin-left: 40px;
         padding: 10px;
     }
@@ -652,6 +652,13 @@ p {
         grid-column: 1;
         grid-row: 6;
         margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .main-card1, .main-card2, .main-card3, .main-card4, .main-card5, .main-card6 {
+        width: 125%;
+        flex-grow: 1;
     }
 }
 
